# coral-testkit

./: .gitignore  CMakeLists.txt  README.md
modules/testkit/: FluentTests.lua  IMemoryQuery.csl  MemoryQuery.csl  ModuleLauncher.lua  Report.lua  Run.csl  Run.lua  Suite.lua  TestRunner.lua  Unit.lua  env.lua  report.lua  unitTests.lua  util.lua
modules/tests/: FluentTests.lua  ModuleLauncher.lua  unitTests.lua
samples/: FluentSample.lua
src/: CMakeLists.txt  MemoryQuery.cpp
tests/: 00-SanityTests.lua  01-SetupTeardown.lua  02-BasicTests.lua  03-NumericTests.lua  04-RelationalTests.lua  05-ErrorTests.lua  AssertionTests.lua  CMakeLists.txt  PathTests.lua
